# koiki-pyfw

./: .editorconfig  .env-sample  .env.ci  .env.example  .env.production.example  .env.saml.example  .env.test  .env.test.example  .gitattributes  .gitignore  .python-version  .python-version-sample  AGENTS.md  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  Dockerfile.unified  ENTERPRISE_DEPENDENCY_STRATEGY.md  KOIKI-FW_0.3.0.md  KOIKI-FW_0.3.1.md  KOIKI-FW_0.5.0.md  KOIKI-FW_0.6.0.md  QUICK_TEST_GUIDE.md  README-deploy.md  README.md  SECURITY_AUDIT_COMMANDS.md  agent-skill-evaluation.json  agent-skill-results.json  alembic.ini  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.optimized.yml  docker-compose.override.yml  docker-compose.production-external.yml  docker-compose.production.yml  docker-compose.unified.dev.yml  docker-compose.unified.yml  docker-compose.yml  (+16 more)
app/: CLAUDE.md  __init__.py  main.py  pyproject.toml
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  business_clock.py  saml_auth.py  sso_auth.py
app/core/: saml_config.py  sso_config.py
app/db/: base.py
app/models/: __init__.py  user_sso.py
app/models/kkbiz/: __init__.py  business_clock.py
app/repositories/: saml_auth_flow_repository.py  user_sso_repository.py  user_table_sso_repository.py
app/repositories/kkbiz/: __init__.py  business_clock_repository.py
app/schemas/: saml.py  sso.py
app/schemas/kkbiz/: business_clock.py
app/services/: saml_certificate_manager.py  saml_metadata_loader.py  saml_service.py  sso_service.py
app/services/kkbiz/: business_clock_service.py
app/web/: __init__.py  auth_router.py  dependencies.py  router.py  templates.py
app/web/static/css/: main.css
app/web/templates/: layout.html
app/web/templates/auth/: login.html
app/web/templates/dashboard/: _login_prompt.html  _todo_menu.html  index.html
app/web/templates/todo/: _form_create.html  _form_edit.html  _row.html  _rows.html  _table.html  index.html
components/koiki_ref_app/: AGENTS.md  CLAUDE.md  alembic.ini  pyproject.toml
components/koiki_ref_app/alembic/: env.py
components/koiki_ref_app/alembic/versions/: 2025070704_add_login_attempts_table.py  20251010001_add_app_columns_to_user_sso.py  20251010002_use_app_columns_as_primary_key.py  20251026001_add_business_clock_table.py  20251030001_rename_business_clock_table.py  20260228001_add_saml_auth_flow_table.py  300ab7334998_fix_permissions_table_column_order.py  956d27e55f29_add_resource_action_fields_to_.py  f1e6d6de66b7_reorder_username_column_first.py
components/koiki_ref_app/src/koiki_ref_app/: __init__.py  app_factory.py  asgi.py
components/koiki_ref_app/src/koiki_ref_app/api/: __init__.py
components/koiki_ref_app/src/koiki_ref_app/bootstrap/: __init__.py  orm.py
components/koiki_ref_app/src/koiki_ref_app/models/: __init__.py  saml_auth_flow.py
components/koiki_ref_app/src/koiki_ref_app/repositories/: saml_auth_flow_repository.py  sso_link_repository.py  sso_link_repository_factory.py  user_sso_repository.py  user_table_sso_repository.py
components/koiki_ref_app/src/koiki_ref_app/schemas/: saml.py  sso.py
components/koiki_ref_app/src/koiki_ref_app/services/: saml_certificate_manager.py  saml_metadata_loader.py  saml_service.py  sso_service.py
components/koiki_ref_app/tests/: conftest.py
components/koiki_ref_app/tests/unit/app/: test_sso_auth_logging.py
components/libkoiki/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
components/libkoiki/src/libkoiki/: __init__.py
components/libkoiki/src/libkoiki/api/v1/: __init__.py
components/libkoiki/src/libkoiki/core/: browser_session.py  config.py  logging.py  security.py  security_config.py  security_logger.py  transaction.py
components/libkoiki/src/libkoiki/db/: __init__.py  base.py  session.py
components/libkoiki/src/libkoiki/events/: handlers.py  publisher.py
components/libkoiki/src/libkoiki/models/: __init__.py  login_attempt.py  password_reset.py  permission.py  todo.py
components/libkoiki/src/libkoiki/repositories/: base.py  login_attempt_repository.py  password_reset_repository.py  refresh_token_repository.py  user_repository.py
components/libkoiki/src/libkoiki/schemas/: browser_session.py  permission.py  refresh_token.py  role.py  todo.py  user.py
components/libkoiki/src/libkoiki/services/: __init__.py  auth_service.py  password_reset_service.py  todo_service.py  user_service.py
components/libkoiki/src/libkoiki/tasks/: email.py
components/libkoiki/tests/: conftest.py
components/libkoiki/tests/unit/core/: test_config_settings.py  test_logging_sanitizer.py  test_security_config.py  test_security_logger.py  test_security_password_hashing.py  test_time_compliance.py
libkoiki/: CLAUDE.md  README.md  __init__.py  pyproject.toml  pyproject.toml      # libkoikiのプロジェクト設定を修正  pyproject.toml.new  setup.py
libkoiki/api/: dependencies.py
libkoiki/api/v1/: router.py
libkoiki/api/v1/endpoints/: __init__.py  auth.py  auth_basic.py  auth_password.py  auth_token.py  security_monitor.py  todos.py  users.py
libkoiki/core/: auth_decorators.py  config.py  config.py.new  csrf.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  middleware.py  monitoring.py  rate_limiter.py  security.py  security.py.new  security_config.py  security_logger.py  security_metrics.py  transaction.py
libkoiki/db/: base.py  session.py
libkoiki/events/: __init__.py  handlers.py  publisher.py
libkoiki/models/: __init__.py  associations.py  login_attempt.py  password_reset.py  permission.py  refresh_token.py  role.py  todo.py  user.py
libkoiki/repositories/: __init__.py  base.py  login_attempt_repository.py  password_reset_repository.py  todo_repository.py  user_repository.py
libkoiki/schemas/: __init__.py  auth.py  permission.py  role.py  todo.py  token.py  user.py
libkoiki/services/: __init__.py  auth_service.py  login_security_service.py  password_reset_service.py  todo_service.py  user_service.py
libkoiki/tasks/: __init__.py  celery_app.py  email.py
libkoiki/utils/: __init__.py  email.py
(+478 files in other folders)
