[project]
name = "koiki-pyfw"
version = "0.7.0"
description = "FastAPI enterprise application framework"
readme = "README.md"
requires-python = ">=3.11.7,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Shuichi Kataoka", email = "shu01k9@gmail.com"}
]
keywords = ["fastapi", "enterprise", "framework", "async", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
# PEP 621: Enterprise-grade dependency management
# All runtime dependencies with strict version control for production stability
dependencies = [
    # Core Web Framework
    "fastapi>=0.136.1,<0.137.0",            # Updated to allow Starlette security fixes
    "uvicorn>=0.34.3,<0.35.0",              # Updated ASGI server (major performance improvements)
    
    # Database Layer (Python 3.13 compatible)
    "sqlalchemy[asyncio]>=2.0.49,<2.1.0",   # Minor version locked
    "asyncpg>=0.30.0,<0.31.0",              # Minor version locked (Python 3.13 support)
    "alembic>=1.16.2,<1.17.0",              # Updated database migration tool
    "psycopg2-binary>=2.9.9,<2.10.0",       # Minor version locked
    "aiosqlite>=0.21.0,<0.22.0",            # Minor version locked (dev/test)
    
    # Data Validation & Settings (Compatible versions for enterprise)
    "pydantic>=2.11.7,<2.12.0",             # Updated for enhanced validation features
    "pydantic-settings>=2.10.0,<2.11.0",    # Latest available version
    "email-validator>=2.2.0,<2.3.0",        # Updated for improved validation
    
    # Security & Authentication
    "PyJWT[crypto]>=2.12.0,<2.13.0",        # JWT library (replaces python-jose + jwcrypto)
    "bcrypt>=4.3.0,<5.0.0",                  # Password hashing backend

    # SAML Authentication
    "python3-saml>=1.16.0,<1.17.0",         # SAML 2.0 authentication support
    "xmlsec>=1.3.13,<1.4.0",                # XML security library for SAML signatures
    
    # HTTP & Communication
    "httpx>=0.28.1,<0.29.0",                # Updated HTTP client
    "python-multipart>=0.0.20,<0.1.0",      # Minor version locked
    
    # Logging & Monitoring
    "structlog>=25.4.0,<25.5.0",            # Updated structured logging
    "prometheus-fastapi-instrumentator>=7.1.0,<7.2.0", # Updated monitoring instrumentation
    
    # Caching & Performance
    "redis>=6.2.0,<6.3.0",                  # Updated Redis client (major version)
    "slowapi>=0.1.8,<0.2.0",                # Current range (stable API)
    
    # Supporting Libraries
    "anyio>=4.9.0,<5.0.0",                  # Async I/O support
    "limits>=5.4.0,<5.5.0",                 # Rate limiting support
    "tzdata>=2024.2,<2026.0",               # IANA timezone database (required for zoneinfo on Windows/containers)
    
    # Local Workspace Dependencies
    "libkoiki",
    "koiki-ref-app",
]

# PEP 735 dependency groups for local development and CI.
[dependency-groups]
dev = [
    # Testing Framework (minor version locked)
    "pytest>=9.0.3,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=6.2.1,<6.3.0",
    "pytest-mock>=3.14.0,<3.15.0",
    "PyYAML>=6.0,<7.0",
    
    # Security & Quality Assurance (pydantic 2.7+ compatible)
    "pip-audit>=2.9.0,<3.0.0",           # Dependency audit (pydantic independent)
    "bandit>=1.8.0,<1.9.0",              # Security linter (pydantic independent)
]
test = [
    "pytest>=9.0.3,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=6.2.1,<6.3.0",
    "pytest-mock>=3.14.0,<3.15.0",
]
security = [
    # Enterprise Security Tooling (pydantic 2.7+ compatible)
    "pip-audit>=2.9.0,<3.0.0",           # OSV database audit (pydantic independent)
    "bandit>=1.8.0,<1.9.0",              # Static security analysis (pydantic independent)
    # Note: safety excluded due to pydantic <2.0 dependency conflict
    # Alternative: Use pip-audit which covers similar vulnerability detection
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "components/libkoiki",
    "components/koiki_ref_app",
]

[tool.uv.sources]
libkoiki = { workspace = true }
"koiki-ref-app" = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "components/libkoiki/tests", "components/koiki_ref_app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: fast tests with no external dependencies",
    "integration: integration tests",
    "db_integration: tests requiring live PostgreSQL; excluded from default CI unless RUN_DB_INTEGRATION=1",
]

[tool.coverage.run]
source = ["app", "koiki_ref_app", "libkoiki"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
