[project]
name = "libkoiki"
version = "0.3.0"
description = "Enterprise-grade FastAPI application framework."
readme = "README.md"
authors = [{ name = "KOIKI Team" }]
license = {text = "MIT"}
requires-python = ">=3.11.7,<4.0"
keywords = ["fastapi", "enterprise", "framework", "async", "sqlalchemy", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
# Enterprise-grade dependency management with strict versioning
dependencies = [
    # Core Web Framework - Latest stable with security patches
    "fastapi>=0.115.13,<0.116.0",         # Latest stable + starlette security fix
    "uvicorn>=0.24.0,<0.25.0",            # Minor version locked
    
    # Database Layer - Critical for data integrity
    "sqlalchemy[asyncio]>=2.0.23,<2.1.0", # Minor version locked
    "asyncpg>=0.30.0,<0.31.0",            # Minor version locked (Python 3.13 support)
    "alembic>=1.12.1,<1.13.0",            # Minor version locked
    
    # Data Validation - Security critical (Compatible versions)
    "pydantic>=2.9.0,<2.10.0",            # Minor version locked (latest stable for enterprise)
    "pydantic-settings>=2.9.1,<2.10.0",   # Minor version locked
    
    # Security & Authentication - Highest priority for fixes
    "python-jose>=3.4.0,<3.6.0",          # Security fix (PYSEC-2024-232,233)
    "passlib[bcrypt]>=1.7.4,<1.8.0",      # Minor version locked
    
    # HTTP Client & Communication
    "httpx>=0.25.0,<0.26.0",              # Minor version locked
    
    # Logging & Monitoring
    "structlog>=23.2.0,<23.3.0",          # Minor version locked
    
    # Caching & Performance
    "redis>=5.0.1,<5.1.0",                # Minor version locked
    
    # Rate Limiting & Security
    "slowapi>=0.1.8,<0.2.0",              # Current range (stable API)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

# Poetry 2.x: Minimal configuration, PEP 621 takes precedence
[tool.poetry]
# Poetry 2.x: Correct package configuration for libkoiki
packages = [{include = "*"}]

# Poetry 2.x: Development dependencies in optional groups
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Development tools for libkoiki specifically
pytest = ">=7.4.0,<8.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=6.2.1,<7.0.0"
pytest-mock = ">=3.14.0,<4.0.0"

# Poetry 2.x: Testing group for CI/CD optimization
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0,<8.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=6.2.1,<7.0.0"

# Poetry 2.x: Minimized dependencies - most moved to PEP 621
[tool.poetry.dependencies]
python = ">=3.11.7,<4.0"
# Only Poetry-specific dependencies remain here

# Poetry 2.x: Modern build system with proper versioning
[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"