[project]
name = "koiki_ref_app"
version = "0.7.1"
description = "Reference application built with KOIKI Framework."
authors = [{ name = "KOIKI Team" }]
license = {text = "MIT"}
requires-python = ">=3.11.7"
dependencies = [
    "defusedxml>=0.7.1,<0.8.0",
    "libkoiki"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
