[project]
name = "libkoiki"
version = "0.7.0"
description = "Enterprise-grade FastAPI application framework."
readme = "README.md"
authors = [{ name = "KOIKI Team" }]
license = {text = "MIT"}
requires-python = ">=3.11.7,<4.0"
keywords = ["fastapi", "enterprise", "framework", "async", "sqlalchemy", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
# Enterprise-grade dependency management with strict versioning
dependencies = [
    # Core Web Framework - Latest stable with security patches
    "fastapi>=0.136.3,<0.137.0",          # Updated to allow Starlette security fixes
    "starlette>=1.1.0,<1.2.0",            # Direct dependency: middleware imports Starlette APIs directly
    "uvicorn>=0.34.3,<0.35.0",            # Updated ASGI server (major performance improvements)
    
    # Database Layer - Critical for data integrity
    "sqlalchemy[asyncio]>=2.0.23,<2.1.0", # Minor version locked
    "asyncpg>=0.30.0,<0.31.0",            # Minor version locked (Python 3.13 support)
    "alembic>=1.16.2,<1.17.0",            # Updated database migration tool
    
    # Data Validation - Security critical (Compatible versions)
    "pydantic>=2.11.7,<2.12.0",           # Updated for enhanced validation features
    "pydantic-settings>=2.10.0,<2.11.0",  # Latest available version
    
    # Security & Authentication - Highest priority for fixes
    "PyJWT[crypto]>=2.12.0,<2.13.0",      # JWT library (replaces python-jose + jwcrypto)
    "bcrypt>=4.3.0,<5.0.0",               # Password hashing backend
    
    # HTTP Client & Communication
    "httpx>=0.28.1,<0.29.0",              # Updated HTTP client
    
    # Logging & Monitoring
    "structlog>=25.4.0,<25.5.0",          # Updated structured logging
    
    # Caching & Performance
    "redis>=6.2.0,<6.3.0",                # Updated Redis client (major version)
    
    # Rate Limiting & Security
    "slowapi>=0.1.8,<0.2.0",              # Current range (stable API)
    
    # Time Zone Support
    "tzdata>=2024.2,<2026.0",             # IANA timezone database (required for zoneinfo on Windows/containers)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
